--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
 	"version": "1.0.0",
 	"description": "",
 	"main": "index.js",
+	"type": "module",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
+		"test.unit": "node -r ts-node/register node_modules/.bin/mocha",
+		"test.unit.watch": "TS_NODE_PROJECT='./tsconfig.test.json' mocha --watch",
 		"build": "tsc"
 	},
 	"repository": {
@@ -23,9 +25,11 @@
 	"devDependencies": {
 		"@types/chai": "4.3.11",
 		"@types/koa": "2.14.0",
+		"@types/mocha": "10.0.6",
 		"@types/node": "20.11.19",
 		"chai": "5.1.0",
 		"mocha": "10.3.0",
+		"ts-node": "10.9.2",
 		"typescript": "5.3.3"
 	}
 }
