--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"type": "module",
 	"scripts": {
-		"test.unit": "node -r ts-node/register node_modules/.bin/mocha",
+		"test.unit": "TS_NODE_PROJECT='./tsconfig.test.json' mocha",
 		"test.unit.watch": "TS_NODE_PROJECT='./tsconfig.test.json' mocha --watch",
 		"build": "tsc"
 	},
@@ -20,7 +20,8 @@
 	},
 	"homepage": "https://github.com/Verthon/task-management-api#readme",
 	"dependencies": {
-		"koa": "2.15.0"
+		"koa": "2.15.0",
+		"zod": "3.22.4"
 	},
 	"devDependencies": {
 		"@types/chai": "4.3.11",
