--- a/.mocharc.json
+++ b/.mocharc.json
@@ -3,6 +3,7 @@
 	"extension": ["ts"],
 	"node-option": [
 		"experimental-specifier-resolution=node",
-		"loader=ts-node/esm"
+		"import=tsx/esm",
+		"trace-uncaught"
 	]
 }
