--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"type": "module",
 	"scripts": {
-		"test.unit": "TS_NODE_PROJECT='./tsconfig.test.json' mocha",
+		"test.unit": "TS_NODE_PROJECT='./tsconfig.test.json' mocha --allow-uncaught",
 		"test.unit.watch": "TS_NODE_PROJECT='./tsconfig.test.json' mocha --watch",
 		"build": "tsc"
 	},
@@ -24,6 +24,7 @@
 		"zod": "3.22.4"
 	},
 	"devDependencies": {
+		"@ava/typescript": "4.1.0",
 		"@types/chai": "4.3.11",
 		"@types/koa": "2.14.0",
 		"@types/mocha": "10.0.6",
@@ -31,6 +32,7 @@
 		"chai": "5.1.0",
 		"mocha": "10.3.0",
 		"ts-node": "10.9.2",
+		"tsx": "4.7.1",
 		"typescript": "5.3.3"
 	}
 }
