--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
 	"main": "index.js",
 	"type": "module",
 	"scripts": {
-		"test.unit": "TS_NODE_PROJECT='./tsconfig.test.json' mocha",
+		"test.unit": "TS_NODE_PROJECT='./tsconfig.test.json' mocha src/**/*.spec.ts",
 		"test.unit.watch": "TS_NODE_PROJECT='./tsconfig.test.json' mocha --watch",
+		"test.integration": "TS_NODE_PROJECT='./tsconfig.test.json' mocha 'src/**/*.spec.integration.ts'",
 		"lint": "eslint .",
 		"lint.fix": "npm run lint -- --fix",
 		"format": "prettier --write ./src/**/*",
@@ -30,6 +31,8 @@
 	"dependencies": {
 		"knex": "3.1.0",
 		"koa": "2.15.0",
+		"koa-bodyparser": "4.4.1",
+		"koa-router": "12.0.1",
 		"sqlite3": "5.1.7",
 		"zod": "3.22.4"
 	},
@@ -38,8 +41,11 @@
 		"@types/chai": "4.3.11",
 		"@types/chai-as-promised": "7.1.8",
 		"@types/koa": "2.14.0",
+		"@types/koa-bodyparser": "4.3.12",
+		"@types/koa-router": "7.4.8",
 		"@types/mocha": "10.0.6",
 		"@types/node": "20.11.19",
+		"@types/supertest": "6.0.2",
 		"@typescript-eslint/eslint-plugin": "7.0.2",
 		"@typescript-eslint/parser": "7.0.2",
 		"chai": "4.4.1",
@@ -51,6 +57,7 @@
 		"eslint-plugin-security": "2.1.1",
 		"mocha": "10.3.0",
 		"prettier": "3.2.5",
+		"supertest": "6.3.4",
 		"ts-node": "10.9.2",
 		"tsx": "4.7.1",
 		"typescript": "5.3.3"
